experiments/security-evaluation/setup/test-pod-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: application-pod-1
  labels:
    app: app
spec:
  nodeName: worker-1
  containers:
  - name: busybox
    image: busybox
    command: ["sh", "-c", "sleep 3600"]
