experiments/security-evaluation/setup/test-pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: application-pod-2
  labels:
    app: app
spec:
  nodeName: worker-2
  containers:
  - name: busybox
    image: busybox
    command: ["sh", "-c", "sleep 3600"]
